# hooksaurus-auctions

./: .gitignore  Cargo.toml  README.md
hooksaurus-core/: Cargo.toml
hooksaurus-core/src/: datetimes.rs  lib.rs  slugify.rs
hooksaurus-frontend/: package-lock.json  package.json  vite.config.js
hooksaurus-frontend/.routify/: routes.default.js
hooksaurus-frontend/src/routes/: _module.svelte  index.svelte
hooksaurus-frontend/src/routes/auctions/[auction]/[auction-item]/: index.svelte
hooksaurus-frontend/src/routes/blog/: [article].svelte
hooksaurus-macros/: Cargo.toml
hooksaurus-macros/src/: derive_to_form.rs  lib.rs
migrations/: 20220227182018_initial_table_setup.down.sql  20220227182018_initial_table_setup.up.sql
src/: config.rs  error.rs  lib.rs  main.rs
src/db/: queries.rs
src/db/tables/: address.rs  article.rs  auction.rs  mod.rs  organization.rs  user.rs
src/endpoints/: base.rs  mod.rs
src/endpoints/admin/: handlers.rs  mod.rs  queries.rs
src/http/: base.rs  mod.rs
static/css/: styles.css
templates/: admin.html  index.html
templates/completes/: address_insert_modal.html  admin_base.html  form_insert_modal.html  list_all_tables.html  table_list_records.html
templates/fragments/: address_detail.html  address_insert_modal.html  form_insert_modal.html  get_address_detail.html  list_all_tables.html  table_list.html  table_list_records.html
