[package]
name = "hooksaurus-auctions"
version = "0.2.0"
edition = "2021"
publish = false
authors = [
    "Erik Aker <eraker@gmail.com>",
    "Shannon Jarrell <scjarrell@gmail.com>",
]
license = "MPL-2.0"

[dependencies]
anyhow = "1.0.48"
argon2 = "0.3.1"
async-trait = "0.1.51"
axum = { version = "0.4.6", features = ["headers", "json", "tower-log"] }
clap = { version = "3.1.0", features = ["derive", "env"] }
env_logger = "0.9.0"
futures = "0.3"
hmac = "0.12.1"
hyper = { version = "0.14.17" }
itertools = "0.10.1"
jwt = "0.16.0"
log = "0.4.14"
minijinja = { version = "0.14.0", features = ["source"] }
rand = "0.8.4"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.73"
sha2 = "0.10.2"
sql-builder = "3.1.1"
sqlx = { version = "0.5.11", features = ["decimal", "runtime-tokio-native-tls", "postgres", "uuid", "time"] }
thiserror = "1.0.30"
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
tower = "0.4.12"
tower-http = { version = "0.2.3", features = ["fs", "cors", "trace"] }
tracing = "0.1.31"
tracing-subscriber = { version="0.3.9", features = ["env-filter"] }
uuid = { version = "0.8", features = ["serde"] }
